kubernetes/authentication-pod.yml




apiVersion: apps/v1
kind: Deployment 
metadata:
  name: authentication-deployment
  
  labels:
    app: Location-based-advertising    
spec:
  replicas: 1
  selector: 
    matchLabels:
        name: authentication
        app:  Location-based-advertising 
  
  template:
        metadata:
           name: authentication
           labels:
             name: authentication
             app:  Location-based-advertising 

        
        spec:
          containers:
              - name:  authentication
                image: ghostih97/authentication
                imagePullPolicy: IfNotPresent
                ports:
                  - containerPort: 8098
