kubernetes/random-service.yml





apiVersion: apps/v1
kind: Deployment 
metadata:
  name: random-deployment
  
  labels:
    app: Location-based-advertising    
spec:
  replicas: 1
  selector: 
    matchLabels:
        name: random-service
        app:  Location-based-advertising 
  
  template:
        metadata:
           name: random-service
           labels:
             name: random-service
             app:  Location-based-advertising 

        
        spec:
          containers:
              - name:  random-service
                image: random-service
                imagePullPolicy: IfNotPresent
                ports:
                  - containerPort: 8049
