kubernetes/authentication-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  labels:
    app: Location-based-advertising  
spec:
  type: NodePort
  ports:
    - port: 8098
      protocol: TCP
      targetPort: 8098
  selector:
    name: authentication
    app:  Location-based-advertising
