kubernetes/config-server.yml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  labels:
    app: Location-based-advertising  
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
     name: config
     app:  Location-based-advertising
