kubernetes/eureka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels:
    app: Location-based-advertising  
spec:
  ports:
    - port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    app: Location-based-advertising  
    tier: eureka
    

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  labels:
    app: Location-based-advertising
spec:
  strategy:
    type: Recreate
  selector: 
    matchLabels:
        app: Location-based-advertising  
        tier: eureka
    
  template:
    metadata:
      labels:
        app: Location-based-advertising
        tier: eureka
    spec:
      containers:
        - image: ghostih97/eureka
          name: eureka
          ports:
            - containerPort: 8761
              name: eureka
