kubernetes/mongoDB.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: Location-based-advertising  
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  
  selector:
      
      tier: mongodb

---



apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb

spec:
  selector:
    matchLabels:
      tier: mongodb
  
  template:
    metadata:
      labels:
        tier: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - name: mongodbport
          containerPort: 27017
          protocol: TCP
