kubernetes/serving-service.yml
apiVersion: v1
kind: Service
metadata:
  name: serving-service
  labels:
    app: Location-based-advertising  
spec:
  type: NodePort
  ports:
    - port: 8051
      protocol: TCP
      targetPort: 8051
  selector:
    name: serving-service
    app:  Location-based-advertising 

---

apiVersion: apps/v1
kind: Deployment 
metadata:
  name: serving-deployment
  
  labels:
    app: Location-based-advertising    
spec:
  replicas: 1
  selector: 
    matchLabels:
        name: serving-service
        app:  Location-based-advertising 
  
  template:
        metadata:
           name: serving-service
           labels:
             name: serving-service
             app:  Location-based-advertising 

        
        spec:
          containers:
              - name:  serving-service
                image: serving-service
                imagePullPolicy: IfNotPresent
                ports:
                  - containerPort: 8051
