kubernetes/spring-config.yml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  labels:
    app: Location-based-advertising  
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
     name: config
     app:  Location-based-advertising 







apiVersion: apps/v1
kind: Deployment 
metadata:
  name: config-deployment
  labels:
    app: Location-based-advertising    
spec:
  replicas: 1
  selector: 
    matchLabels:
        name: config
        app:  Location-based-advertising 
  
  template:
        metadata:
           name: config
           labels:
             name: config
             app: Location-based-advertising 

        
        spec:
          containers:
              - name: spring-config
                image: spring-config
                imagePullPolicy: IfNotPresent
                ports:
                  - containerPort: 8888
